manifests/prod/scb-web/Deployment-ipman.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: ipman
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ipman
    app.kubernetes.io/version: 1.16.0
    control-plane: controller-manager
    helm.sh/chart: ipman-0.0.2
  name: ipman
  namespace: ipman-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: ipman
      app.kubernetes.io/name: ipman
      control-plane: controller-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ipman
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: ipman
        app.kubernetes.io/version: 1.16.0
        control-plane: controller-manager
        helm.sh/chart: ipman-0.0.2
    spec:
      containers:
        - env:
            - name: NAMESPACE_NAME
              value: ipman-system
            - name: XFRMINION_IMAGE
              value: plan9better/xfrminion:0.0.1
            - name: VXLANDLORD_IMAGE
              value: plan9better/vxlandlord:0.0.1-1
            - name: RESTCTL_IMAGE
              value: plan9better/restctl:0.0.1-1
            - name: CHARONDAEMON_IMAGE
              value: plan9better/strongswan-charon:0.0.1
            - name: CADDY_IMAGE
              value: caddy:2.10.0-alpine
            - name: PROXY_SOCKET_PATH
              value: /var/run/restctl
            - name: CHARON_SOCKET_PATH
              value: /var/run/
          image: plan9better/operator:0.0.1-2
          imagePullPolicy: Always
          name: ipman
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /etc/webhook/certs
              name: webhook-certs
              readOnly: true
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: ipman-service-account
      volumes:
        - name: webhook-certs
          secret:
            secretName: ipman-webhook-cert-secret
