manifests/prod/scb-web/Deployment-scb-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scb-web
  namespace: scb-web
spec:
  selector:
    matchLabels:
      app: scb-web-proxy
  template:
    metadata:
      annotations:
        ipman.dialo.ai/childName: scb-web
        ipman.dialo.ai/ipmanName: scb-web
        ipman.dialo.ai/poolName: proxy
      labels:
        app: scb-web-proxy
    spec:
      containers:
        - image: nginx:stable
          name: proxy
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          volumeMounts:
            - mountPath: /etc/nginx
              name: nginx-config
      volumes:
        - configMap:
            name: nginx-config
          name: nginx-config
