manifests/prod/scb-web/Pod-scb-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: scb-web
  namespace: scb-web
spec:
  containers:
    - image: nginx:stable
      name: proxy
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          add:
            - NET_ADMIN
            - NET_RAW
      volumeMounts:
        - mountPath: /etc/nginx
          name: nginx-config
  restartPolicy: Never
  volumes:
    - configMap:
        name: nginx-config
      name: nginx-config
