manifests/prod/scb-web/Service-ipman-restctl-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipman-restctl-service
  namespace: ipman-system
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    ipserviced: "true"
