manifests/prod/scb-web/Service-ipman-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipman-webhook-service
  namespace: ipman-system
spec:
  ports:
    - name: webhook
      port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app.kubernetes.io/name: ipman
    control-plane: controller-manager
