manifests/prod/scb-web/NetworkPolicy-allow-ingress-default-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: Helm
    meta.helm.sh/release-name: ipman
    meta.helm.sh/release-namespace: default
  name: allow-ingress-default-np
  namespace: default
spec:
  ingress:
    - {}
  podSelector: {}
  policyTypes:
    - Ingress
